--- a/Views/homepage.pug
+++ b/Views/homepage.pug
@@ -5,13 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tora-Industries</title>
+<link rel="stylesheet" href="../Static/homepage.css">
 </head>
 <body>
     <header class="header">
 <ul>    
     <a href="/"> <img src="../content/industry-background-industrial-concept-27568932.jpg" alt="Brand Logo"> </a>
-        <a href="/"><li>Home</li> </a>
-
+        <a href="/"><li>Home</li> </a> 
+        <a href="/aboutus"><li>About Us    </li>    </a>
+        <a href="/"> Join Now  </a>
+        <a href=""></a>
 
 
 
