--- a/Static/homepage.css
+++ b/Static/homepage.css
@@ -1,7 +1,12 @@
+/* CSS RESET CODE !!!!  */
 body{padding: 0px;
-margin: 0px;
+margin: 0px;  
+color: black;
 text-decoration: none;  
-color: blue;  }
+}
+a{text-decoration: inherit;
+color: inherit;
+}
 
 
 
@@ -9,10 +14,29 @@ color: blue;  }
 
 
 
-
-
-.header{ float: left;
+/* css for the header */
+.navbar{ float: left;
 text-decoration: inherit;
 display: flex;
--ms-flex-align: center;
-background-color: burlywood; }
+background-color: burlywood; 
+justify-content: center;
+height: 6rem;
+color: black;
+width: 100vw;
+color: inherit;
+font-size: 1.25rem;
+
+
+
+}
+
+.navbar li  {margin-top: 1rem;
+padding: 1rem;
+color: inherit;
+text-decoration: inherit;
+list-style: none;
+}
+.navbar img {
+height: 2rem;
+padding-left: 2rem;
+}
