--- a/views/homepage.html
+++ b/views/homepage.html
@@ -9,18 +9,12 @@
     <title>Tora-Industries</title>
 </head>
 <body>
-    <header class="header">
-<ul>    
-    <a href="/"> <img src="../content/industry-background-industrial-concept-27568932.jpg" alt="Brand Logo"> </a>
+    <header class="navbar">
+        <a href="/"> <li> <img src="../content/R.png" alt="Brand Logo"> </a> </li>
         <a href="/"><li>Home</li> </a> 
         <a href="/aboutus"><li>About Us</li></a>
-        <a href="/">Join Now</a>
+        <a href="/applynow"><li>Apply Now</li></a>
         <a href=""></a>
-
-
-
-    </ul>
-</header>
-
+    </header>
 </body>
 </html>
