--- a/views/homepage.html
+++ b/views/homepage.html
@@ -4,17 +4,47 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../Static/homepage.css">
+    <!-- FONT LINKS -->
+    <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Baloo+Bhaijaan+2&display=swap" rel="stylesheet">
 
-    <title>Tora-Industries</title>
+
+
+    <link rel="stylesheet" href="../Static/homepage.css">
+    <script src="../Static/homepage.js"></script>
+
+
+    
+    <title>Tora-Industries</title>  
 </head>
 <body>
+    <div>
     <header class="navbar">
         <a href="/"> <li> <img src="../content/R.png" alt="Brand Logo"> </a> </li>
         <a href="/"><li>Home</li> </a> 
         <a href="/aboutus"><li>About Us</li></a>
         <a href="/applynow"><li>Apply Now</li></a>
-        <a href=""></a>
-    </header>
+        <a href="/products"><li> Products </li></a>
+    </header><span></span>
+    <div class="container1">
+        THis is container1
+    </div>
+
+
+    <footer class="footer">
+        <ul>
+         
+           <li>  All Copyrights reserved © ToraIndustries 2022</li>
+            <li> Powered By: Basim Jangda</li> 
+            <li> Gmail: basimabid3@gmail.com</li>
+         
+           
+          <a href="https://www.instagram.com/"> <img class="instagram" src="../content/instagram-icon-white-on-black-circle.png" alt="Instagram Handle"> </a>
+          <a href="https://www.facebook.com/"> <img src="../content/facebook 2.png" alt="Facebook Page"> </a>
+          <a href="https://www.twitter.com/">  <img src="../content/twitter.png" alt="Twitter Handle"> </a>
+         
+
+
+        </ul>
+    </footer>
 </body>
 </html>
