--- a/Static/homepage.css
+++ b/Static/homepage.css
@@ -3,6 +3,8 @@ body{padding: 0px;
 margin: 0px;  
 color: black;
 text-decoration: none;  
+list-style: none;
+
 }
 a{text-decoration: inherit;
 color: inherit;
@@ -18,7 +20,7 @@ color: inherit;
 .navbar{ float: left;
 text-decoration: inherit;
 display: flex;
-background-color: burlywood; 
+background-color: #b9b5b0; 
 justify-content: center;
 height: 6rem;
 color: black;
@@ -39,4 +41,50 @@ list-style: none;
 .navbar img {
 height: 2rem;
 padding-left: 2rem;
+} 
+
+.container1{
+    background-image: url(../content/industry.jpg);
+    height: 25rem;
+    width: 100vw;
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: 50% 50% ;
+    z-index: 10;
+    display: flex;
+    justify-content: center;
+}
+.container1 img {
+    height:auto;max-width:100%
+}
+
+
+
+
+.footer{
+    height: 7rem;
+    background-color: rgb(161, 161, 161);
+    font-family: 'Baloo Bhaijaan 2', cursive;
+    font-size: 1rem;
+    display: flex;
+    width: 100vw;
+    
+    
+}
+.footer img {
+    display: inherit;
+    height: 3rem;
+    width: 3rem;
+}
+.footer a{
+    
+    position: relative;
+    top: -3.75rem;
+    left: 86vw;
+}
+
+
+.footer li{
+list-style-type: none;
+margin-left: none;
 }
