--- a/views/homepage.html
+++ b/views/homepage.html
@@ -17,23 +17,24 @@
     <title>Tora-Industries</title>  
 </head>
 <body>
-    <div>
-    <header class="navbar">
-        <a href="/"> <li> <img src="../content/R.png" alt="Brand Logo"> </a> </li>
-        <a href="/"><li>Home</li> </a> 
-        <a href="/aboutus"><li>About Us</li></a>
-        <a href="/applynow"><li>Apply Now</li></a>
-        <a href="/products"><li> Products </li></a>
+    <div class="desktop">
+        <header class="navbar">
+        <a href="/"> <li> <img  src="../content/R.png" alt="Brand Logo"> </a> </li>
+        <a href="/"><li class="navbarbtn" >Home</li> </a> 
+        <a href="/aboutus"><li class="navbarbtn" >About Us</li></a>
+        <a href="/applynow"><li class="navbarbtn" >Apply Now</li></a>
+        <a href="/products"><li class="navbarbtn" > Products </li></a>
+        
     </header><span></span>
     <div class="container1">
-        THis is container1
+        THis is container1 
     </div>
-
-
+    
+    
     <footer class="footer">
         <ul>
          
-           <li>  All Copyrights reserved © ToraIndustries 2022</li>
+            <li>  All Copyrights reserved © ToraIndustries 2022</li>
             <li> Powered By: Basim Jangda</li> 
             <li> Gmail: basimabid3@gmail.com</li>
          
@@ -41,10 +42,23 @@
           <a href="https://www.instagram.com/"> <img class="instagram" src="../content/instagram-icon-white-on-black-circle.png" alt="Instagram Handle"> </a>
           <a href="https://www.facebook.com/"> <img src="../content/facebook 2.png" alt="Facebook Page"> </a>
           <a href="https://www.twitter.com/">  <img src="../content/twitter.png" alt="Twitter Handle"> </a>
-         
-
-
+          
+          
+          
         </ul>
     </footer>
+ 
 </body>
+
+
+
+
+
+
+
+
+
+
+
+
 </html>
