--- a/Static/homepage.css
+++ b/Static/homepage.css
@@ -15,7 +15,6 @@ color: inherit;
 
 
 
-
 /* css for the header */
 .navbar{ float: left;
 text-decoration: inherit;
@@ -60,7 +59,6 @@ padding-left: 2rem;
 
 
 
-
 .footer{
     height: 7rem;
     background-color: rgb(161, 161, 161);
@@ -87,4 +85,25 @@ padding-left: 2rem;
 .footer li{
 list-style-type: none;
 margin-left: none;
+}
+
+@media screen and 
+ (max-width: 844px) , screen and (max-height: 390px) {  
+ 
+.navbar {
+    background-color: navy;
+}
+.navbar img {
+    justify-content: center;
+    height: 2rem;
+}    
+.navbarbtn {
+    display: none;
+}
+
+
+
+
+
+
 }
