--- a/Static/homepage.css
+++ b/Static/homepage.css
@@ -1,109 +1,70 @@
 /* CSS RESET CODE !!!!  */
 body{padding: 0px;
-margin: 0px;  
-color: black;
-text-decoration: none;  
-list-style: none;
-
-}
-a{text-decoration: inherit;
-color: inherit;
-}
+    margin: 0px;  
+    color: black;
+    text-decoration: none;  
+    list-style: none;}
+    a{text-decoration: inherit;
+    color: inherit;}
 
 
+    .navbar{
+        background-color: rgb(143, 143, 226);
+        height: 5rem;
+        width: 100vw;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        
+    }
+    .navbar img {
+        height: 2rem;
+        width: auto;
+        transition: 0.5s all ease-in-out;
+        
+    }
+    .navbar img:hover{
+        transform: scale(1.2);
+        
+    }
+    /* MOBILE DISPLAY CSS */
+    @media screen and (max-width: 400px) , screen  and (max-height: 900px) {
 
-
-
-
-/* css for the header */
-.navbar{ float: left;
-text-decoration: inherit;
-display: flex;
-background-color: #b9b5b0; 
-justify-content: center;
-height: 6rem;
-color: black;
-width: 100vw;
-color: inherit;
-font-size: 1.25rem;
-
-
-
-}
-
-.navbar li  {margin-top: 1rem;
-padding: 1rem;
-color: inherit;
-text-decoration: inherit;
-list-style: none;
-}
-.navbar img {
-height: 2rem;
-padding-left: 2rem;
-} 
-
-.container1{
-    background-image: url(../content/industry.jpg);
-    height: 25rem;
-    width: 100vw;
-    background-size: contain;
-    background-repeat: no-repeat;
-    background-position: 50% 50% ;
-    z-index: 10;
+        .navbar{
+            z-index: -1;
+        }
+.m-container {
+    border-left: 1rem;
+    border-color: grey;
     display: flex;
-    justify-content: center;
-}
-.container1 img {
-    height:auto;max-width:100%
+    align-items: flex-end;
+    flex-direction: column;
+    
+    margin: 0rem 0rem 0rem 0rem;
+    position: absolute;
+    right: -5rem;    
+    transition: 0.5s all ease;
 }
 
 
-
-.footer{
-    height: 7rem;
-    background-color: rgb(161, 161, 161);
-    font-family: 'Baloo Bhaijaan 2', cursive;
-    font-size: 1rem;
-    display: flex;
-    width: 100vw;
-    
-    
-}
-.footer img {
-    display: inherit;
-    height: 3rem;
-    width: 3rem;
-}
-.footer a{
-    
+#sidebarbtn {
+    content: url(../content/sidebar\ bars.png);
+    height: 1.5rem;
+    width: auto;
     position: relative;
-    top: -3.75rem;
-    left: 86vw;
+    bottom: 3.5rem;
+    right: 5rem;
+    display: flex;
+    align-items: flex-end;
+    float: right;
 }
 
-
-.footer li{
-list-style-type: none;
-margin-left: none;
+#sidebarbtn:checked  {
+    content: url(../content/Close.jpg);}  
+    
+#sidebarbtn:checked ~ .m-container {
+    right: 2rem;
 }
-
-@media screen and 
- (max-width: 844px) , screen and (max-height: 390px) {  
- 
-.navbar {
-    background-color: navy;
-}
-.navbar img {
-    justify-content: center;
-    height: 2rem;
-}    
-.navbarbtn {
-    display: none;
-}
-
-
-
-
 
 
 }
