--- a/views/homepage.html
+++ b/views/homepage.html
@@ -4,61 +4,26 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- FONT LINKS -->
-    <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Baloo+Bhaijaan+2&display=swap" rel="stylesheet">
-
-
-
     <link rel="stylesheet" href="../Static/homepage.css">
-    <script src="../Static/homepage.js"></script>
-
-
-    
-    <title>Tora-Industries</title>  
+    <title>Document</title>
 </head>
 <body>
-    <div class="desktop">
-        <header class="navbar">
-        <a href="/"> <li> <img  src="../content/R.png" alt="Brand Logo"> </a> </li>
-        <a href="/"><li class="navbarbtn" >Home</li> </a> 
-        <a href="/aboutus"><li class="navbarbtn" >About Us</li></a>
-        <a href="/applynow"><li class="navbarbtn" >Apply Now</li></a>
-        <a href="/products"><li class="navbarbtn" > Products </li></a>
-        
-    </header><span></span>
-    <div class="container1">
-        THis is container1 
-    </div>
+<div class="navbar">    
+    <a href="/"><ul><img src="../content/R.png" alt="Brand Logo"> </a></ul>
+</div>
+<input type="checkbox" name="" id="sidebarbtn" >   
+    <span class="m-container"><div id="sidebar">
+        <a href="/"><ul>Home</ul></a>
+        <a href="/aboutus"><ul>About Us</ul></a>
+        <a href="/applynow"><ul>ApplyNow</ul></a>
+        <a href="/team"><ul>Our Team</ul></a>
+    </div></span>
+
+
+
+
+
+
     
-    
-    <footer class="footer">
-        <ul>
-         
-            <li>  All Copyrights reserved © ToraIndustries 2022</li>
-            <li> Powered By: Basim Jangda</li> 
-            <li> Gmail: basimabid3@gmail.com</li>
-         
-           
-          <a href="https://www.instagram.com/"> <img class="instagram" src="../content/instagram-icon-white-on-black-circle.png" alt="Instagram Handle"> </a>
-          <a href="https://www.facebook.com/"> <img src="../content/facebook 2.png" alt="Facebook Page"> </a>
-          <a href="https://www.twitter.com/">  <img src="../content/twitter.png" alt="Twitter Handle"> </a>
-          
-          
-          
-        </ul>
-    </footer>
- 
 </body>
-
-
-
-
-
-
-
-
-
-
-
-
 </html>
