--- a/views/homepage.html
+++ b/views/homepage.html
@@ -7,23 +7,25 @@
     <link rel="stylesheet" href="../Static/homepage.css">
     <title>Document</title>
 </head>
-<body>
-<div class="navbar">    
-    <a href="/"><ul><img src="../content/R.png" alt="Brand Logo"> </a></ul>
-</div>
-<input type="checkbox" name="" id="sidebarbtn" >   
-    <span class="m-container"><div id="sidebar">
+
+<body id="body">
+    <div class="navbar">    
+        <a href="/"><img src="../content/R.png" alt="Brand Logo"> </a>
+    </div>
+     <input type="checkbox" id="sidebarbtn" onclick="sidebarbtn()"  >  
+    <span id="m-container"><div id="sidebar">
         <a href="/"><ul>Home</ul></a>
         <a href="/aboutus"><ul>About Us</ul></a>
         <a href="/applynow"><ul>ApplyNow</ul></a>
         <a href="/team"><ul>Our Team</ul></a>
     </div></span>
-
-
-
-
-
-
+    
+    
+    
+    
+    
+    
     
 </body>
-</html>
+<script src="../Static/homepage.js"></script>
+</html> 
