--- a/views/homepage.html
+++ b/views/homepage.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Baloo+Thambi+2&family=Pacifico&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../Static/homepage.css">
     <title>Document</title>
 </head>
@@ -19,8 +20,24 @@
         <a href="/applynow"><ul>ApplyNow</ul></a>
         <a href="/team"><ul>Our Team</ul></a>
     </div></span>
+
+
+    <div class="hidden" id="heading1">Welcome</div>
     
-    
+    <div class="hidden" id="s"> Some Info About Us </div> 
+    <div id="info" class="hidden" >
+        This Company was Founded by a group of friends. It started from a classroom and began to spread its name all over the world. Its Founding members are mentioned Below 
+    </div>
+
+
+
+
+
+
+
+    <footer id="footer">This website is completely made by HTML CSS JAVASCRIPT AND NODE JS (FOR BACKEND) <br> By Basim Jangda
+        <br> basimabid3@gmail.com
+    </footer>
     
     
     
