--- a/views/homepage.html
+++ b/views/homepage.html
@@ -13,23 +13,43 @@
     <div class="navbar">    
         <a href="/"><img src="../content/R.png" alt="Brand Logo"> </a>
     </div>
-     <input type="checkbox" id="sidebarbtn" onclick="sidebarbtn()"  >  
-    <span id="m-container"><div id="sidebar">
-        <a href="/"><ul>Home</ul></a>
-        <a href="/aboutus"><ul>About Us</ul></a>
-        <a href="/applynow"><ul>ApplyNow</ul></a>
-        <a href="/team"><ul>Our Team</ul></a>
-    </div></span>
+
+    <div class="sidebar">
+        <ul>
+        <a href="/applynow"><li>Apply Now</li>  </a>
+        <a href="/Contact Us"><li>Contact Us</li></a>
+        
+            </ul>
+    </div>
+
+    
+    <div class="btn">
+        <span class="bar"></span>
+        <span class="bar"></span>
+        <span class="bar"></span>
+
+    </div> 
 
 
     <div class="hidden" id="heading1">Welcome</div>
     
     <div class="hidden" id="s"> Some Info About Us </div> 
     <div id="info" class="hidden" >
-        This Company was Founded by a group of friends. It started from a classroom and began to spread its name all over the world. Its Founding members are mentioned Below 
+        This Company was Founded by a group of friends. It started from a classroom and began to spread its name all over the world. Its Founding members are mentioned Below who are also known as the Tora Boys
     </div>
 
+     <div class="hidden" id="teamheading">
+        Our Team 
+     </div>
 
+     <div id="saleembhai">
+        <img src="../content/saleembhai.jpg" alt="Saleem bhai Photo">
+        <p>Saleem Bhai is currently the Ceo and Chairman of Tora Industries. He has a high rank in the organization mainly due to his leadership qualities. </p>
+     </div>
+
+     <div id="saeedahmed">
+        <img src="" alt="">
+     </div>
 
 
 
