--- a/views/homepage.html
+++ b/views/homepage.html
@@ -14,13 +14,13 @@
         <a href="/"><img src="../content/R.png" alt="Brand Logo"> </a>
     </div>
 
-    <div class="sidebar">
-        <ul>
-        <a href="/applynow"><li>Apply Now</li>  </a>
-        <a href="/Contact Us"><li>Contact Us</li></a>
-        
-            </ul>
-    </div>
+    <!-- <div class="sidebar"> -->
+        <!-- <ul> -->
+        <!-- <a href="/applynow"><li>Apply Now</li>  </a> -->
+        <!-- <a href="/Contact Us"><li>Contact Us</li></a> -->
+        <!--  -->
+            <!-- </ul> -->
+    <!-- </div> -->
 
     
     <div class="btn">
