--- a/views/homepage.html
+++ b/views/homepage.html
@@ -42,14 +42,25 @@
         Our Team 
      </div>
 
-     <div id="saleembhai">
+     <div class="member" class="hidden">
         <img src="../content/saleembhai.jpg" alt="Saleem bhai Photo">
         <p>Saleem Bhai is currently the Ceo and Chairman of Tora Industries. He has a high rank in the organization mainly due to his leadership qualities. </p>
      </div>
 
-     <div id="saeedahmed">
-        <img src="" alt="">
+     <div class="member" class="hidden">
+        <img src="../content/ahmedmuhammad.jpg" alt="ahmedmuhammad">
+        <p>Ahmed Muhammad is the Head of Operations for the China Region. His Negotiation skills make him different from the others </p>
      </div>
+     <div class="member" class="hidden" >
+        <img src="../content/salahuddin.jpg" alt="salahuddin">
+        <p>Salahuddin is incharge for all the content creating responsibilites. Whether it is a photo edit or a video meme, he is the person behind it</p>
+     </div>
+
+     <div class="member" class="hidden">
+        <img src="../content/saeed.jpg" alt="saeed Ahmed">
+        <p>Ye kuch nahi karta bas aese hi hai</p>
+     </div>
+     
 
 
 
