--- a/views/homepage.html
+++ b/views/homepage.html
@@ -12,23 +12,24 @@
 <body id="body">
     <div class="navbar">    
         <a href="/"><img src="../content/R.png" alt="Brand Logo"> </a>
+        <div class="btn"  onclick="btn1()">
+            <span class="bar"></span>
+            <span class="bar"></span>
+            <span class="bar"></span>
+    
+        </div> 
     </div>
 
-    <!-- <div class="sidebar"> -->
-        <!-- <ul> -->
-        <!-- <a href="/applynow"><li>Apply Now</li>  </a> -->
-        <!-- <a href="/Contact Us"><li>Contact Us</li></a> -->
-        <!--  -->
-            <!-- </ul> -->
-    <!-- </div> -->
+    <div class="sidebar" id="sidebar1">
+        <ul>
+            <a href="/ourteam"><li>Our Team</li></a>
+            <a href="/applynow"><li>Apply Now</li>  </a>
+            <a href="/bonuscontent"><li>Bonus Content</li> </a>    
+        
+            </ul>
+    </div>
 
     
-    <div class="btn">
-        <span class="bar"></span>
-        <span class="bar"></span>
-        <span class="bar"></span>
-
-    </div> 
 
 
     <div class="hidden" id="heading1">Welcome</div>
@@ -42,26 +43,31 @@
         Our Team 
      </div>
 
-     <div class="member" class="hidden">
+     <div class="member hidden" >
         <img src="../content/saleembhai.jpg" alt="Saleem bhai Photo">
         <p>Saleem Bhai is currently the Ceo and Chairman of Tora Industries. He has a high rank in the organization mainly due to his leadership qualities. </p>
      </div>
 
-     <div class="member" class="hidden">
+     <div class="member hidden" >
         <img src="../content/ahmedmuhammad.jpg" alt="ahmedmuhammad">
         <p>Ahmed Muhammad is the Head of Operations for the China Region. His Negotiation skills make him different from the others </p>
      </div>
-     <div class="member" class="hidden" >
+     <div class="member hidden"  >
         <img src="../content/salahuddin.jpg" alt="salahuddin">
         <p>Salahuddin is incharge for all the content creating responsibilites. Whether it is a photo edit or a video meme, he is the person behind it</p>
      </div>
 
-     <div class="member" class="hidden">
+     <div class="member hidden" >
         <img src="../content/saeed.jpg" alt="saeed Ahmed">
         <p>Ye kuch nahi karta bas aese hi hai</p>
      </div>
-     
-
+    <div class="member hidden">
+        <img src="../content/ubaidullah wajid.jpg" alt="ubaidullah wajid">
+        <p>Ubaidullah Wajid is the minister of the education sector. He is most needed days before exams. His ultimate knowledge is the reason of his position. </p>
+    </div> 
+<div class="member hidden">
+    <img src="../content/" alt="haroon Sharif">
+</div>
 
 
 
