--- a/Static/homepage.css
+++ b/Static/homepage.css
@@ -5,14 +5,30 @@ body{padding: 0px;
     background-color: black;
     text-decoration: none;  
     list-style: none;
-font-family: 'Baloo Thambi 2', cursive; }
-
+    font-family: 'Baloo Thambi 2', cursive; }
+    
     a{text-decoration: inherit;
     color: inherit;}
-
-
+    
+    .hidden {
+    filter: blur(5px);
+    opacity: 0;
+    transition: all 1s ease-out;
+    transform: translate(-100%);
+    padding-left: 1rem;
+    padding-right: 1rem;
+    
+    }
+    
+    
+    
+    .show {
+    opacity: 1;
+    filter: blur(0);
+    transform: translate(0%);}
+    
     .navbar{
-        background-color: rgb(59, 59, 65);
+        background-color:white;
         height: 5rem;
         width: 100vw;
         display: flex;
@@ -35,42 +51,38 @@ font-family: 'Baloo Thambi 2', cursive; }
     .bar {
         display: block;
         width: 1.2rem;
-        height: 0.18rem;
+        height: 0.2rem;
         margin: 0.3rem auto;
         transition:  all 0.3s ease-in-out;
-        background-color: white;
+        background-color: black;
     }
     .btn {
-        float: right;
-        cursor: pointer;}
+        float: left;
+        cursor: pointer;
+        z-index: 1;
+        position: fixed;
+        right: 2.2rem;
+        }
+
+     .sidebar ul  {
+        /* position: absolute; */
+        display: flex;
+        flex-direction: column;
+        list-style: none;
+        font-size: 1rem;
+        color: black;
+        background-color: white;
+        margin: 0px;
+        margin-bottom: 1rem;
+        transform: translateY(-150%);
+        
 
         
-    .hidden {
-    filter: blur(5px);
-    opacity: 0;
-    transition: all 1s;
-    transform: translate(-100%);
-    padding-left: 1rem;
-    padding-right: 1rem;
-}
-
-  .hidden img {
-    margin: 0px 0px 0px 0px;
-    padding: 0px 0px 0px 0px;
-  }
-    
-  
-.show {
-    opacity: 1;
-    filter: blur(0);
-    transform: translate(0%);}
-
-    
-    .sidebar ul  {
-        position: fixed;
-        list-style: none;
-        float: right;
-        font-size: 1.2rem;
+        }
+            .sidebar li {
+                margin: 1rem;
+                text-align: center;
+                
             }
 
     .btn.active .bar:nth-child(2){
@@ -90,7 +102,6 @@ font-family: 'Baloo Thambi 2', cursive; }
         display: flex;
         justify-content: center;
         width: auto;
-        z-index: -1;
     }
     #s {
         font-size: 2rem;
@@ -112,22 +123,25 @@ font-family: 'Baloo Thambi 2', cursive; }
         font-size: 2rem;
         margin-top: 4rem;
     }
-
+    
     .member img {
         display: block;
         width: 50%;
         height: 10rem;
         margin: auto;
-       margin-top: 2rem; 
+        margin-top: 2rem; 
     }
     .member p {
         margin-top: 0px;
         text-align: center;
     }
-     
+    
+    .sidebar{
+        margin: 0px;
+    }
 
-
-
-
-
-
+    
+    
+    
+    
+    
