--- a/views/homepage.html
+++ b/views/homepage.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Baloo+Thambi+2&family=Pacifico&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../Static/homepage.css">
-    <title>Document</title>
+    <title>Tora Industries</title>
 </head>
 
 <body id="body">
@@ -16,7 +16,6 @@
             <span class="bar"></span>
             <span class="bar"></span>
             <span class="bar"></span>
-    
         </div> 
     </div>
 
@@ -29,6 +28,7 @@
             </ul>
     </div>
 
+    <div id="translate">
     
 
 
@@ -39,47 +39,21 @@
         This Company was Founded by a group of friends. It started from a classroom and began to spread its name all over the world. Its Founding members are mentioned Below who are also known as the Tora Boys
     </div>
 
-     <div class="hidden" id="teamheading">
-        Our Team 
-     </div>
+    <div class="hidden" id="h2">
+        Our Proud Achievements
+    </div>
+    <div class="hidden member ">
+        <img src="../content/haroon sharif scam.jpg" alt="h-01">
+        <p>This highly talented individual was in need of a graphic card to pursue his career. When he contacted our company he recieved a graphic card for free as a donation. His happiness can be seen in the photo above. </p>
 
-     <div class="member hidden" >
-        <img src="../content/saleembhai.jpg" alt="Saleem bhai Photo">
-        <p>Saleem Bhai is currently the Ceo and Chairman of Tora Industries. He has a high rank in the organization mainly due to his leadership qualities. </p>
-     </div>
-
-     <div class="member hidden" >
-        <img src="../content/ahmedmuhammad.jpg" alt="ahmedmuhammad">
-        <p>Ahmed Muhammad is the Head of Operations for the China Region. His Negotiation skills make him different from the others </p>
-     </div>
-     <div class="member hidden"  >
-        <img src="../content/salahuddin.jpg" alt="salahuddin">
-        <p>Salahuddin is incharge for all the content creating responsibilites. Whether it is a photo edit or a video meme, he is the person behind it</p>
-     </div>
-
-     <div class="member hidden" >
-        <img src="../content/saeed.jpg" alt="saeed Ahmed">
-        <p>Ye kuch nahi karta bas aese hi hai</p>
-     </div>
-    <div class="member hidden">
-        <img src="../content/ubaidullah wajid.jpg" alt="ubaidullah wajid">
-        <p>Ubaidullah Wajid is the minister of the education sector. He is most needed days before exams. His ultimate knowledge is the reason of his position. </p>
-    </div> 
-<div class="member hidden">
-    <img src="../content/" alt="haroon Sharif">
-</div>
-
-
-
-
-    <footer id="footer">This website is completely made by HTML CSS JAVASCRIPT AND NODE JS (FOR BACKEND) <br> By Basim Jangda
+    </div>
+    
+    <footer id="footer" class="hidden"> Powered By: Basim Jangda
         <br> basimabid3@gmail.com
     </footer>
     
     
-    
-    
-    
+</div>    
 </body>
 <script src="../Static/homepage.js"></script>
 </html> 
