--- a/Static/homepage.css
+++ b/Static/homepage.css
@@ -13,7 +13,7 @@ body{padding: 0px;
     .hidden {
     filter: blur(5px);
     opacity: 0;
-    transition: all 1s ease-out;
+    transition: all 1s ;
     transform: translate(-100%);
     padding-left: 1rem;
     padding-right: 1rem;
@@ -60,10 +60,12 @@ body{padding: 0px;
         float: left;
         cursor: pointer;
         z-index: 1;
-        position: fixed;
+        position: absolute;
         right: 2.2rem;
         }
-
+        .sidebar{
+            width: 100vw;
+        }
      .sidebar ul  {
         /* position: absolute; */
         display: flex;
@@ -75,16 +77,16 @@ body{padding: 0px;
         margin: 0px;
         margin-bottom: 1rem;
         transform: translateY(-150%);
-        
-
-        
         }
             .sidebar li {
                 margin: 1rem;
                 text-align: center;
-                
+                transition: all 0.5s ;
             }
-
+            .sidebar li:hover{
+                color: blue;
+                padding-left: 0.5rem;
+            }
     .btn.active .bar:nth-child(2){
         opacity: 0;
     }
@@ -118,30 +120,31 @@ body{padding: 0px;
     }
     
     /* OUR TEAM CSS      */
-    #teamheading {
-        text-align: center;
-        font-size: 2rem;
-        margin-top: 4rem;
-    }
-    
-    .member img {
-        display: block;
-        width: 50%;
-        height: 10rem;
-        margin: auto;
-        margin-top: 2rem; 
-    }
-    .member p {
-        margin-top: 0px;
-        text-align: center;
-    }
-    
     .sidebar{
         margin: 0px;
     }
 
-    
-    
+    #translate {
+        transform: translateY(-10%);
+    }
+
+    #h2 {
+        text-align: center;
+        margin-top: 1rem;
+        font-size: 1.5rem;
+        margin-left: 1rem;
+        margin-right: 1rem;
+    }
+    .member img {
+        display: block;
+    width: 50%;
+    height: auto;
+    margin: auto;
+    margin-top: 2rem; 
+    }
+    .member p {
+        text-align: center;
+    }
     
     
     
