--- a/Static/ourteam.css
+++ b/Static/ourteam.css
@@ -9,3 +9,112 @@ font-family: 'Baloo Thambi 2', cursive; }
 
     a{text-decoration: inherit;
     color: inherit;}
+
+    .hidden {
+        filter: blur(5px);
+        opacity: 0;
+        transition: all 1s ;
+        transform: translate(-100%);
+        padding-left: 1rem;
+        padding-right: 1rem;
+        
+        }
+        
+        
+        
+        .show {
+        opacity: 1;
+        filter: blur(0);
+        transform: translate(0%);}
+        
+        .navbar{
+            background-color:white;
+            height: 5rem;
+            width: 100vw;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            
+        }
+        .navbar img {
+            height: 2rem;
+            width: auto;
+            transition: 0.5s all ease-in-out;
+            vertical-align: center ;
+            
+        }
+        .navbar img:hover{
+            transform: scale(1.2);
+            
+        }
+    
+        .bar {
+            display: block;
+            width: 1.2rem;
+            height: 0.2rem;
+            margin: 0.3rem auto;
+            transition:  all 0.3s ease-in-out;
+            background-color: black;
+        }
+        .btn {
+            float: left;
+            cursor: pointer;
+            z-index: 1;
+            position: absolute;
+            right: 2.2rem;
+            }
+            .sidebar{
+                width: 100vw;
+            }
+         .sidebar ul  {
+            /* position: absolute; */
+            display: flex;
+            flex-direction: column;
+            list-style: none;
+            font-size: 1rem;
+            color: black;
+            background-color: white;
+            margin: 0px;
+            margin-bottom: 1rem;
+            transform: translateY(-150%);
+            }
+                .sidebar li {
+                    margin: 1rem;
+                    text-align: center;
+                    transition: all 0.5s ;
+                }
+                .sidebar li:hover{
+                    color: blue;
+                    padding-left: 0.5rem;
+                }
+        .btn.active .bar:nth-child(2){
+            opacity: 0;
+        }
+        .btn.active .bar:nth-child(1){
+            transform: translateY(0.5rem) rotate(45deg)  ;
+        }
+        .btn.active .bar:nth-child(3){
+            transform: translateY(-0.5rem)  rotate(-45deg)   ;}
+
+/* OUR TEAM CSS      */
+#teamheading {
+    text-align: center;
+    font-size: 2rem;
+    margin-top: 3.5rem;
+}
+
+.member img {
+    display: block;
+    width: 50%;
+    height: 15rem;
+    margin: auto;
+    margin-top: 2rem; 
+}
+.member p {
+    margin-top: 0px;
+    text-align: center;
+}            
+
+#translate {
+    transform: translateY(-10%);
+}
