--- a/views/ourteam.html
+++ b/views/ourteam.html
@@ -1,13 +1,91 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Baloo+Thambi+2&family=Pacifico&display=swap" rel="stylesheet">  
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Baloo+Thambi+2&family=Pacifico&display=swap" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../Static/ourteam.css">
     <title>Our Team</title>
 </head>
+
 <body>
-    
+    <div class="navbar">
+        <a href="/"><img src="../content/R.png" alt="Brand Logo"> </a>
+
+        <div class="btn" onclick="btn1()">
+            <span class="bar"></span>
+            <span class="bar"></span>
+            <span class="bar"></span>
+        </div>
+    </div>
+
+    <div class="sidebar" id="sidebar1">
+        <ul>
+            <li> <a href="/ourteam"></a> Our Team </a> </li>
+            <a href="/applynow">
+                <li>Apply Now</li>
+            </a>
+            <a href="/bonuscontent">
+                <li>Bonus Content</li>
+            </a>
+
+        </ul>
+    </div>
+
+    <div id="translate">
+
+
+        <div class="hidden" id="teamheading">
+            Our Team
+        </div>
+
+        <div class="member hidden">
+            <img src="../content/saleembhai.jpg" alt="Saleem bhai Photo">
+            <p>Saleem Bhai is currently the Ceo and Chairman of Tora Industries. He has a high rank in the organization
+                mainly due to his leadership qualities. </p>
+        </div>
+
+        <div class="member hidden">
+            <img src="../content/ahmedmuhammad.jpg" alt="ahmedmuhammad">
+            <p>Ahmed Muhammad is the Head of Operations for the China Region. His Negotiation skills make him different
+                from the others </p>
+        </div>
+        <div class="member hidden">
+            <img src="../content/salahuddin.jpg" alt="salahuddin">
+            <p>Salahuddin is incharge for all the content creating responsibilites. Whether it is a photo edit or a
+                video meme, he is the person behind it</p>
+        </div>
+
+        <div class="member hidden">
+            <img src="../content/saeed.jpg" alt="saeed Ahmed">
+            <p>Ye kuch nahi karta bas aese hi hai</p>
+        </div>
+        <div class="member hidden">
+            <img src="../content/ubaidullah wajid.jpg" alt="ubaidullah wajid">
+            <p>Ubaidullah Wajid is the minister of the education sector. He is most needed days before exams. His
+                ultimate knowledge is the reason of his position. </p>
+        </div>
+        <div class="member hidden">
+            <img src="../content/haroon.jpg" alt="haroon Sharif">
+            <p>Haroon Sharif runs the sport and fitness program of the company which makes him a role model for the
+                youth.</p>
+        </div>
+
+
+
+
+        <footer id="footer"> Powered By: Basim Jangda
+            <br> basimabid3@gmail.com
+        </footer>
+
+
+
+    </div>
 </body>
+<script src="../Static/homepage.js"></script>
+
 </html>
