--- a/views/applynow.html
+++ b/views/applynow.html
@@ -4,11 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../Static/applynow.css">
     <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Baloo+Thambi+2&family=Pacifico&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="../Static/homepage.css">
-    <title>Tora Industries</title>
+    <title>Apply Now</title>
 </head>
-
 <body id="body">
     <div class="navbar">    
         <a href="/"><img src="../content/R.png" alt="Brand Logo"> </a>
@@ -28,34 +27,31 @@
         
             </ul>
     </div>
-
     <div id="translate">
-    
+        <div id="applynow" class="hidden">
+            Apply Now to contribute in the success of the company
+        </div>
+        <div id="f-info" class="hidden" >
+            Give appropriate answers to show your worth for the institution
+        </div>
 
 
-    <div class="hidden" id="heading1">Welcome</div>
-    
-    <div class="hidden" id="s"> Some Info About Us </div> 
-    <div id="info" class="hidden" >
-        This Company was Founded by a group of friends. It started from a classroom and began to spread its name all over the world. Its Founding members are mentioned Below who are also known as the Tora Boys
-    </div>
-
-    <div class="hidden" id="h2">
-        Our Proud Achievements
-    </div>
-    <div class="hidden member ">
-        <img src="../content/haroon sharif scam.jpg" alt="h-01">
-        <p>This highly talented individual was in need of a graphic card to pursue his career. When he contacted our company he recieved a graphic card for free as a donation. His happiness can be seen in the photo above. </p>
-    </div>
+        <div class="hidden" id="form">
+         Name  <input type="text" required >
+         Age <input type="number" required >
+         Adress <input type="text" required>
+         Something About Yourself <input type="text" id="something" >
+         <button class="submit">Submit</button>
+         <button class="submit">Reset</button>
+        </div>
 
 
 
-    
-    <footer id="footer" class="hidden"> Powered By: Basim Jangda
-        <br> basimabid3@gmail.com
-    </footer>
-    
-</div>    
+
+
+
+
+</div>
 <script src="../Static/homepage.js"></script>
 </body>
-</html> 
+</html>
