--- a/views/ourteam.html
+++ b/views/ourteam.html
@@ -25,10 +25,12 @@
 
     <div class="sidebar" id="sidebar1">
         <ul>
+            <a href="/"><li>Home</li></a>
+
             <li> <a href="/ourteam"></a> Our Team </a> </li>
             <a href="/applynow">
                 <li>Apply Now</li>
-            </a>
+             </a>
             <a href="/bonuscontent">
                 <li>Bonus Content</li>
             </a>
@@ -78,6 +80,7 @@
 
 
 
+
         <footer id="footer"> Powered By: Basim Jangda
             <br> basimabid3@gmail.com
         </footer>
@@ -85,7 +88,7 @@
 
 
     </div>
+    <script src="../Static/homepage.js"></script>
 </body>
-<script src="../Static/homepage.js"></script>
 
 </html>
