--- a/Static/ourteam.css
+++ b/Static/ourteam.css
@@ -116,5 +116,9 @@ font-family: 'Baloo Thambi 2', cursive; }
 }            
 
 #translate {
-    transform: translateY(-10%);
+    transform: translateY(-12%);
+}
+footer{
+    border-top: 0.1rem solid grey;
+    padding-top: 1.5rem;
 }
