--- a/views/applynow.html
+++ b/views/applynow.html
@@ -36,14 +36,15 @@
         </div>
 
 
-        <div class="hidden" id="form">
-         Name  <input type="text" required >
-         Age <input type="number" required >
-         Adress <input type="text" required>
-         Something About Yourself <input type="text" id="something" >
-         <button class="submit">Submit</button>
-         <button class="submit">Reset</button>
-        </div>
+        <form action="" class="hidden" id="form">
+        Name  <input type="text" required  >
+        Age <input type="number" required >
+         Email <input type="text" required>
+         Something About Yourself <textarea name="adress" id="adress" required></textarea>
+         Adress <textarea name="adress" id="adress" required></textarea>
+         <input type="submit" class="submit" value="Submit" >
+         <input type="reset" value="Clear Form" class="submit" />
+        </form>
 
 
 
