--- a/views/ourteam.html
+++ b/views/ourteam.html
@@ -16,7 +16,7 @@
     <div class="navbar">
         <a href="/"><img src="../content/R.png" alt="Brand Logo"> </a>
 
-        <div class="btn" onclick="btn1()">
+        <div class="btn" onclick="btnteam()">
             <span class="bar"></span>
             <span class="bar"></span>
             <span class="bar"></span>
@@ -76,6 +76,11 @@
             <p>Haroon Sharif runs the sport and fitness program of the company which makes him a role model for the
                 youth.</p>
         </div>
+
+        <div class="member hidden">
+            <img src="../content/ajmal sharif.jpg" alt="Ajmal Sharif">
+            <p>Ajmal Sharif also known as the IMF of the company is incharge for all financial operations including Assets and Loan management </p>
+            </div>
 
 
 
