--- a/views/ourteam.html
+++ b/views/ourteam.html
@@ -14,7 +14,7 @@
 
 <body>
     <div class="navbar">
-        <a href="/"><img src="../content/R.png" alt="Brand Logo"> </a>
+        <a href="/"><img src="../content/RENEWED.png" alt="Brand Logo"> </a>
 
         <div class="btn" onclick="btnteam()">
             <span class="bar"></span>
