--- a/views/homepage.html
+++ b/views/homepage.html
@@ -11,7 +11,7 @@
 
 <body id="body">
     <div class="navbar">    
-        <a href="/"><img src="../content/R.png" alt="Brand Logo"> </a>
+        <a href="/"><img src="../content/RENEWED.png" alt="Brand Logo"> </a>
         <div class="btn"  onclick="btn1()">
             <span class="bar"></span>
             <span class="bar"></span>
